--- a/assets/style.css
+++ b/assets/style.css
@@ -317,33 +317,35 @@ footer{
 
 /* Blog Page Search bar start */
 .seacrh-bar{
-    margin-top: 8rem;
+    margin-top: 10rem;
     display: flex;
     justify-content: center;
+    height: 100px;
 }
 .search-container{
     width: 30rem;
+    height: 3rem; 
     background: var(--color-gray-1);
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    /* align-items: center; */
+    justify-content: center;
     overflow: hidden;
-    padding: .6rem 1rem;
-    border-radius: var(--border-radius-2);
+    padding: 1 0rem;
+    border-radius: var(--border-radius-5);
     color: var(--color-primary-variant);
-    /* video 1:02:51 */
 }
 .search-container>div{
     display: flex;
     align-items: center;
-    width: .5rem 0;
+    width: .4rem 0;
 
 }
 .search-container input{
+    /* text-align: center;  */
     background:  transparent;
-    padding: .5ram 0;
+    padding: 2.0rem;
     width: 100%;
-    margin-left: .7rem;
+    margin-left: 2 0rem;
     color: var(--color-white)
 }
 
@@ -352,14 +354,23 @@ footer{
 }
 /* custom button */
 .btn{
-    display: inline-block;
-    width: fit-content;
-    padding: .6rem 1.2rem;
+    /* display: inline-block; */
+    /* width: fit-content; */
+    padding: .8rem 2rem;
     background: var(--color-primary);
     cursor: pointer;
-    border-radius: var(--border-radius-1);
+    border-radius: var(--border-radius-5);
     color: var(--color-white);
+}.btn {
+    padding: 0.8rem 2rem;
+    background: var(--color-primary);
+    cursor: pointer;
+    border-radius: var(--border-radius-5);
+    color: var(--color-white);
+    margin-left: 0.5rem; /* Atur margin kiri sesuai kebutuhan */
+    margin-right: 0.5rem; /* Atur margin kanan sesuai kebutuhan */
 }
+
 .btn:hover{
     opacity: 0.75;
 }
