--- a/assets/style.css
+++ b/assets/style.css
@@ -450,66 +450,120 @@ footer{
 
 
 /* start sign */
-.form-section {
+.form-section-signup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
-    display: grid;
-    place-items: center;
-    
+    text-align: center; /* Menengahkan teks dan konten di dalamnya */
 }
-
-.form-section-container {
-    width: 30rem;
-}
-
-.message-alert {
-    padding: .8rem 1rem;
-    margin-bottom: 1rem;
-    border-radius: var(--border-radius-1);
-}
-
-.message-alert-eror {
-    background: var(--color-danger-light);
- 
-}
-
-.message-alert-success {
-    background: var(--color-success-light);
-}
-
 form {
+    width: 300px; 
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    
+}
+.container-signup {
+    margin-top: 20px;
+}
+.btn-sign-up {
+    background-color: #3498db; /* Warna latar belakang tombol */
+    color: #fff; /* Warna teks tombol */
+    /* Properti lain sesuai kebutuhan */
+    padding: 0.8rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
-.form-control {
-    display: flex;
-    flex-direction: column;
-    gap: .4rem;
+.btn-sign-up:hover {
+    background-color: #2980b9; /* Warna latar belakang tombol saat dihover */
 }
 
 input,
-textarea,
-select {
-    padding: 0.8rem 1.4rem;
-    background: var(--color-gray-1);
-    border-radius: var(--border-radius-1);
-    resize: none;
-    color: var(--color-white);
+small {
+    width: 100%;
+    padding: 0.8rem;
+    margin-bottom: 0.5rem;
+    border-radius: 5px;
+    /* border: 1px solid #ccc; */
 }
 
-form small {
-    display: flex;
-    gap: .5rem;
-    align-items: center;
-    margin-top: 1rem;
+input[type="file"],
+button {
+    cursor: pointer;
 }
 
-form small a{
-    font-size: 19px;
-    color: var(--color-success);
+small {
+    text-align: center;
 }
+
+@media (max-width: 768px) {
+    form {
+        width: 90%;
+    }
+}
+
 /* sign END */
+/* start sign in */
+.form-section-signin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center; /* Menengahkan teks dan konten di dalamnya */
+}
+
+.container-signin {
+    width: 300px; /* Sesuaikan lebar formulir */
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 20px;
+    /* border: 1px solid #ccc; */
+    border-radius: 5px;
+    background-color: transparent; /* Warna latar belakang form */
+}
+
+.btn-sign-in {
+    background-color: #3498db; /* Warna latar belakang tombol */
+    color: #fff; /* Warna teks tombol */
+    padding: 0.8rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-sign-in:hover {
+    background-color: #2980b9; /* Warna latar belakang tombol saat dihover */
+}
+
+input[type="email"],
+input[type="password"] {
+    width: 100%;
+    padding: 0.8rem;
+    margin-bottom: 0.5rem;
+    border-radius: 5px;
+}
+
+button {
+    cursor: pointer;
+}
+
+small {
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .container-signin {
+        width: 90%;
+    }
+}
+/* sign in END */
 
 
 
@@ -784,5 +838,89 @@ form small a{
 }
 
 /*end about*/
+
+
+/*Start Contact*/
+.container-box-contact {
+    padding: 30px;
+    text-align: center;
+    background: linear-gradient(to top left, skyblue, violet) no-repeat center fixed;
+    background-size: cover;
+}
+
+.container-form-contact {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px; /* Jarak antara elemen dalam form */
+    align-items: center;
+    margin-top: 20px; /* Mengurangi jarak atas form */
+    margin-bottom: 20px; /* Mengurangi jarak bawah form */
+}
+
+.input-field {
+    padding: 10px;
+    margin: 7px;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid black;
+    box-shadow: 2px 2px 2px 1px black;
+    width: 250px;
+    max-width: 500px;
+    max-height: 100px;
+    background-color: rgb(236, 227, 227);
+    color: #000000;
+}
+
+.input-field:focus {
+    background-color: white;
+}
+
+/* Ganti warna latar saat tombol di-hover */
+#btn-submit:hover {
+    cursor: pointer;
+    background-color: rgb(107, 218, 107);
+}
+
+#btn-reset:hover {
+    cursor: pointer;
+    background-color: rgb(255, 48, 48);
+}
+/*End Contact*/
+
+/*Start Categorie*/
+/* Hapus gaya default list dan tautan */
+.dropdown,
+.dropdown-content {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+/* Atur tampilan dropdown */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--color-primary); 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Tampilkan dropdown saat tautan dihover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Atur tampilan tautan dropdown */
+.dropdown a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    color: #ffffff; /* Warna teks tautan dropdown */
+}
+
+/* Atur tampilan tautan saat dihover */
+.dropdown a:hover {
+    background-color:var(--color-primary); /* Warna latar saat dihover */
+}
 
 
